--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -24,8 +24,6 @@
     "from concurrent.futures import ThreadPoolExecutor as PoolExecutor\n",
     "from random import choices\n",
     "from collections import defaultdict\n",
-    "import hyperopt\n",
-    "from hyperopt import hp,fmin,tpe,STATUS_OK\n",
     "\n"
    ]
   },
@@ -126,6 +124,7 @@
     }
    ],
    "source": [
+    "# an articulation point is a node whose remove causes there to be partition in the network\n",
     "allArticulators = list(nx.articulation_points(G))\n",
     "filtered_a_nodes = list(filter(lambda n: G.degree[n]>1,allArticulators))\n",
     "print(f\"{len(allArticulators)} articulation points\")\n",
@@ -549,19 +548,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:15<00:00, 66.21trial/s, best loss: 31.0] \n",
-      "{'_num_choices': 1, 'num_choices': 0}\n",
-      "{'centers': array([], dtype=int32), 'leaves': array([12])}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "centers, leaves = 1000,1000\n",
     "\n",
